<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_sesion1">Nivel 1</string>
    <string name="title_activity_sesion2">Nivel 2</string>
    <string name="title_activity_sesion3">Nivel 3</string>
    <string name="title_activity_sesion5">Nivel 5</string>
    <string name="app_name">Conéctate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="anios">Etapa (11-18 años) donde inician cambios físicos, psicológicos y sociales, surgen la transformación niño-hombre, niña-mujer</string>
    <string name="atributos">Es el conjunto de atributos físicos\n y psicológicos y funcionales expresados\n en la identidad personal por medio de\n lo que pensamos, sentimos y hacemos.\n Estos cambios tiene su inicio en la\n adolescencia</string>
    <string name="cambiosmu">La vulva aumenta de tamaño y los labios menores se ensanchan y oscurecen.\n Útero y ovarios alcanzan su desarrollo.\n Producción de óvulos y empieza menstruación.\n Crecimiento de los senos y de vello en axilas y pubis.\n Ensanchamiento de caderas.\n La pelvis se redondea.\n Presencia de acné.\n</string>
    <string name="cambioshom">Aumenta estatura corporal y el tamaño del pene y testículos.\n Producción de espermatozoides y eyaculación.\n Desarrollo de músculos y la voz se hace mas grave.\n Crece vello en axilas, en pubis, bigote, piernas y pecho.\n Presencia de acné</string>
    <string name="cambiostitulo">Cambios psicologicós y sociales</string>
    <string name="cambiosptext">Preocupación por imagen atractiva.\n Deseo de pertenencia a un grupo, de\n aceptación y dependencia familiar.\n preocupación de rol sexual.\n Cambios en el estado de humor.\n Nesecidad de privacidad</string>
    <string name="ciclo">Ciclo mentrual</string>
    <string name="conductastitle">Conductas sexuales sin riesgo</string>
    <string name="conductastexto">Conversasiones con pareja.\n Besos en la mejilla.\n Compartir cubiertos.\n Masturbarse.\n Bañarse con la pareja.\n Besos rápidos en los labios\n Saludar y abrazar a alguien con Sida\n Coqueteo a la pareja\n Abstiencia sexual\n Ser virgen.\n Dar y recibir masajes</string>
    <string name="conductasriestitle">Conductas sexuales de riesgo</string>
    <string name="conductasriestext">Sexo sin condón(oral,anal,vaginal).\n Inyectarse droga y compartir jeringa.\n Sexo sin condón con personas que se drogan.\n Sexo de coito interrumpido(sacar el\n pene antes de eyaculars)</string>
    <string name="sexsugurotitle">Sexo seguro</string>
    <string name="sessegurotext">Toda practica sexual con proteccion\n (condón).El condón protege un 98%,\nevita el contagio de ITS/HIV.\n Monogamia:Una sola pareja(fidelidad mutua)</string>
    <string name="claratitle">Clara una historia de silencios</string>
    <string name="claratext">Insertar video</string>
    <string name="title_activity_sesion4">Nivel 4</string>
    <string name="title4">Nivel 4\n Palabras clave de la educación\n afectiva</string>
    <string name="acti">En esta actividad hablaremos de temas\n importantes como afectividad, empatía,\n autoestima, autorrealización. Vamos a\n profundizar en estas palabras</string>
    <string name="index">En esta actividad hablaremos de temas \n importantes como afectividad, empatía,\n autoestima, autorrealización. Vamos a\n profundizar en estas palabras</string>
    <string name="afec">Afectividad: Significa orientarse hacia las\n personas, involucrarse con los demás\n depositando en ellos confianza. Se\n relaciona con el cariño, el afecto, el amor y\n la emoción</string>
    <string name="auto">Autoestima: Es la imagen positiva o\n negativa que se tiene de sí mismo. Se\n refiere al amor propio, al respeto a sí\n mismo, la estima propia. Un ejemplo para\n mantener una autoestima positiva es\n tener visión y metas</string>
    <string name="empa">Empatía: es la capacidad que tiene una\n persona de ponerse en el lugar de otra, es \n decir, poder sentir su alegría, tristeza, \n emociones y sentimientos. Un ejemplo \n para desarrollar la empatía es favorecer la\n conducta positiva y respetar las diferentes \n opiniones. </string>
    <string name="autorea">Autorealización: Significa realizar cada una \n de las elecciones particulares, como tener \n una conducta sexual segura</string>
    <string name="imagina">Imaginemos\nEsta actividad se basa en la utilización de\n la técnica de imaginación mental, la cual\n es de gran utilidad para conseguir que las\n personas sean conscientes de aspectos\n que desean realizar.\n Puedes ponerte cómodo, relajarte\n e imaginarte a ti mismo dentro de 10 años.\n Cuando estés listo presiona el botón\n “iniciar audio”</string>
    <string name="miproyeco">Mi proyecto\n\n Para comenzar un proyecto personal es\n importante:\n a. Plantearse una meta clara\n b. Establecer las tareas que se deben\n realizar para lograrla.\n c. Organizar las tareas en el orden en que\n se deberían realizar.\n d. Ponerlas en marcha y evaluar los logros\n que se vayan consiguiendo.\n</string>
    <string name="paso1">El primer paso es plantearse una meta\n clara y concreta, esto no ayuda a\n identificar lo que queremos conseguir.\n La meta ha de ser sincera: algo que\n realmente deseemos alcanzar; realista:\n conseguir la meta en mediano plazo\n divisible; que podamos determinar los\n pasos a seguir y medible; que podamos\n comprobar lo que hemos alcanzado. \n </string>
    <string name="paso2">El segundo paso es establecer las tareas\n que se deben realizar para lograrla y\n pensar en lo que tendrías que hacer para\n lograrla.\n\n\n El tercer paso consiste en ordenar las\n tareas establecidas, ordenar de manera\n lógica según la secuencia de corto o largo\n plazo.\n </string>
    <string name="paso4">El cuarto paso es poner en marcha las\n tareas y evaluar los resultados obtenidos.\n Es importante ir evaluando los esfuerzos\n realizados puede ser difícil hacerlo uno\n mismo pero puede resultar fácil si se le\n pide a un familiar o amigo que nos ayude.\n</string>
    <string name="meta">Meta:Supera la timidez para mejorar la autoestima\n TAreaspara conseguirlo(piensa en todas las tareas\n que consideras significativas, noimporta el orden)\n -Saludar a gente que conozcas\n -Unirse a grupos de compañeros y amigos en recreo\n -Iniciar conversaciones con familiares\n -Hacer preguntas al profesor durante las clases\n -Iniciar conversaciones con compañeros\n -Iniciar conversaciones con personas conocidas\n Organización de las tareas(empezar por lo más\n fácil y avanzar hacia las tareas más dificiles)\n -Saludar a gnete que conozcas\n -Iniciar conversaciones con familiares\n -Iniciar conversaciones con personas conocidas\n -Iniciar conversaciones con compañeros\n -Unirse a grupos de compañeros y amigos en recreo\n -Hacer preguntas al profesor durante las clases\n </string>
    <string name="final4">¡Felicidades has terminado la actividad! </string>
    <string name="yoloswag">&lt;</string>
    <string name="title_activity_sesion6">Nivel 6</string>
    <string name="title6">Nivel 6\n Comunicación eficaz</string>
    <string name="comutitle">En este nivel hablaremos de la\n comunicación y de cómo\n desarrollarla para convertirla en\n una habilidad social</string>
    <string name="comutext">A)Conducta socialmente habilidosa\n B) Componentes verbales\n C) Componentes no verbales\n D)Elementos de la comunicación\n E)Comunicación con la familia\n F)Juego de rol en la comunicación familiar</string>
    <string name="conductitle">Conducta socialmente\n habilidosa</string>
    <string name="condutext">Conjunto de comportamientos\n emitidos por una persona que\n expresan sentimientos, \n actitudes, deseos, opiniones o\n derechos de un modo\n adecuado en diversas\n situaciones con la capacidad de\n resolver problemas de la vida\n diaria</string>
    <string name="compvertitle"> Componentes vervales </string>
    <string name="compvertext" />
    <string name="compnovertitle">Componentes no vervales</string>
    <string name="compnovertext" />
    <string name="comfatilte">Comunicacion con la familia</string>
    <string name="comfatext">Genera un papel protector en\n situaciones de riesgo sexual,\n por lo que tener una \n adecuada comunicación \n ayuda a fortalecer los lazos\n de protección</string>
    <string name="asertitle">Aprendiando a ser asertivo</string>
    <string name="asertext">Conjunto de comportamientos\n emitidos por una persona\n que expresan sentimientos, actitudes, deseos, opiniones\n o derechos de un modo\n adecuado en diversas\n situaciones con la capacidad\n de resolver problemas de la\n vida diaria</string>
    <string name="title_activity_sesion7">Nivel 7</string>
    <string name="title_activity_sesion8">Nivel 8</string>

</resources>