<?xml version="1.0"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sesion2" >

    <Button
        android:id="@+id/ant"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/arrowprevicon"
        android:onClick="anterior" />

    <Button
        android:id="@+id/sig"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_alignBaseline="@+id/ant"
        android:layout_alignBottom="@+id/ant"
        android:layout_alignParentRight="true"
        android:background="@drawable/arrownexticon"
        android:onClick="siguiente" />

    <ViewFlipper
        android:id="@+id/viewFlipper1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="70sp"
        android:paddingRight="70sp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Nivel 2 \nSEXUALIDAD"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="500dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Ciclo menstrual"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="570dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Conductas sexuales sin riesgo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="650dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Conductas sexuales con riesgo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="730dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Sexo seguro"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Cambios psicologicos y sociales"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="54dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Cambios en el hombre"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="61dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Adolescencia"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView4"
                android:layout_alignLeft="@+id/textView4"
                android:layout_marginBottom="60dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Cambios en la mujer"
                android:textSize="20sp" />

<!--             <TextView -->
<!--                 android:id="@+id/textView2" -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_centerHorizontal="true" -->
<!--                 android:layout_marginTop="810dp" -->
<!--                 android:background="@drawable/border" -->
<!--                 android:gravity="center" -->
<!--                 android:text="Clara: una historia silenciosa" -->
<!--                 android:textSize="20sp" /> -->
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Sexualidad"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="69dp"
                android:gravity="center"
                android:text="@string/atributos"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="173dp"
                android:gravity="center"
                android:text="@string/anios"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView2"
                android:layout_alignLeft="@+id/textView1"
                android:layout_marginBottom="60dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Adolesencia"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Cambios en la mujer"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="69dp"
                android:gravity="center"
                android:text="@string/cambiosmu"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="56dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Cambios en el hombre"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="78dp"
                android:gravity="center"
                android:text="@string/cambioshom"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/cambiostitulo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="69dp"
                android:gravity="center"
                android:text="@string/cambiosptext"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="100dp"
                android:layout_marginTop="500dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/ciclo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="127dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Aqui va un video"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/conductastitle"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="70dp"
                android:gravity="center"
                android:text="@string/conductastexto"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="105dp"
                android:gravity="center"
                android:text="@string/conductasriestext"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="80dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/conductasriestitle"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="114dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/sexsugurotitle"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="57dp"
                android:gravity="center"
                android:text="@string/sessegurotext"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="500dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/claratitle"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="78dp"
                android:gravity="center"
                android:text="@string/claratext"
                android:textSize="25sp" />
        </RelativeLayout>
    </ViewFlipper>

</RelativeLayout>